--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ defaults:
       type: "pages"    # markdown-sider
     values:
       layout: "default"
-      has_toc: "false" # kommentar: fjerne 'Table of contents'
+      has_toc: false # kommentar: fjerne 'Table of contents'
